fix: applied overflow

--- a/apps/commudle-admin/src/app/feature-modules/public-events/components/home-event/home-event.component.scss
+++ b/apps/commudle-admin/src/app/feature-modules/public-events/components/home-event/home-event.component.scss
@@ -5,10 +5,12 @@
       position: relative;
       display: flex;
       overflow: hidden;
+      justify-content: center;
+      align-items: center;
 
       .event-background {
+        @apply com-mx-auto lg:com-w-full com-w-[calc(100%-30px)];
         position: absolute;
-        width: 100%;
         height: 100%;
         top: 0;
         bottom: 0;
